Fix lawyer geocoding confidence for match distance
